--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <section class="color-shape figma reference">
                         <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=358%3A29&node-id=358%3A35&scaling=min-zoom" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -562,7 +562,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <section class="color-shape figma reference">
                         <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=134%3A161&node-id=134%3A162&scaling=min-zoom" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -583,7 +583,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <section class="color-shape figma reference">
                         <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=70%3A400&node-id=70%3A413&scaling=min-zoom" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -604,7 +604,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <section class="color-shape figma reference">
                         <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=75%3A1545&node-id=75%3A1549&scaling=min-zoom" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -625,7 +625,7 @@
                     <!-- //box -->
 
                      <!-- box -->
-                     <section class="color-shape reference">
+                     <section class="color-shape figma reference">
                         <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=75%3A1545&node-id=75%3A1549&scaling=min-zoom" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
