--- a/refer-effect/sliderEffect/jquerySE01.html
+++ b/refer-effect/sliderEffect/jquerySE01.html
@@ -195,7 +195,7 @@
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
        const sliderWrap = $(".slider-wrap");
