--- a/site-react/main.html
+++ b/site-react/main.html
@@ -73,10 +73,10 @@
         <section id="mainCont">
             <h2 class="sr-only">여기는 메인 컨텐츠 입니다.</h2>
             <div class="main__cont">
-                <div>we provide</div>
-                <div>visual coding</div>
+                <div>we<br>provide</div>
+                <div>visual<br>coding</div>
                 <div>solutions</div>
-                <div>for you webs</div>
+                <div>for you<br>webs</div>
             </div>
         </section>
     </main>
