--- a/refer-effect/mouseEffect/jqueryME01.html
+++ b/refer-effect/mouseEffect/jqueryME01.html
@@ -100,6 +100,9 @@
             <li><a href="javascriptME03.html">3</a></li>
             <li><a href="javascriptME04.html">4</a></li>
             <li><a href="javascriptME05.html">5</a></li>
+            <li><a href="javascriptME06.html">6</a></li>
+            <li><a href="javascriptME07.html">7</a></li>
+            <li><a href="javascriptME08.html">8</a></li>
         </ul>
         <ul>
             <li class="active"><a href="jqueryMe01.html">1</a></li>
@@ -107,6 +110,9 @@
             <li><a href="jqueryMe03.html">3</a></li>
             <li><a href="jqueryMe04.html">4</a></li>
             <li><a href="jqueryMe05.html">5</a></li>
+            <li><a href="jqueryMe06.html">6</a></li>
+            <li><a href="jqueryMe07.html">7</a></li>
+            <li><a href="jqueryMe08.html">8</a></li>
         </ul>
     </div>
     <!-- //info -->
