--- a/site-react/script.html
+++ b/site-react/script.html
@@ -85,13 +85,15 @@
         </div>
         <div>
             <h4>social</h4>
-            <li><a href="/"></a>Youtube</li>
-            <li><a href="/"></a>Instargram</li>
-            <li><a href="/"></a>Github</li>
-            <li><a href="/"></a>Cafe</li>
-            <li><a href="/"></a>Reference</li>
-            <li><a href="/"></a>Tutorial</li>
-            <li><a href="/"></a>CSS</li>
+            <ul>
+                <li><a href="/">Youtube</a></li>
+                <li><a href="/">Instargram</a></li>
+                <li><a href="/">Github</a></li>
+                <li><a href="/">Cafe</a></li>
+                <li><a href="/">Reference</a></li>
+                <li><a href="/">Tutorial</a></li>
+                <li><a href="/">CSS</a></li>
+            </ul>
         </div>
         <div></div>
     </footer>
