--- a/site-react/main2.html
+++ b/site-react/main2.html
@@ -53,7 +53,7 @@
 
     <header id="header">
         <div class="header__port"><a href="portfolio.html">portfolio</a></div>
-        <div class="header__logo"><a href="main.html">HAR</a></div>
+        <div class="header__logo"><a href="main2.html">HAR</a></div>
         <nav class="header__menu">
             <ul>
                 <li><a href="about.html">About</a></li>
