--- a/site-react/about.html
+++ b/site-react/about.html
@@ -52,8 +52,8 @@
     <!-- //skip -->
 
     <header id="header">
-        <div class="header__port"><a href="portfolio.html"></a></div>
-        <div class="header__logo"><a href="main.html">HAR</a></div>
+        <div class="header__port"><a href="portfolio.html">portfolio</a></div>
+        <div class="header__logo"><a href="main2.html">HAR</a></div>
         <div class="header__menu">
             <ul>
                 <li><a href="about.html">About</a></li>
