--- a/refer-effect/mouseEffect/javascriptME08.html
+++ b/refer-effect/mouseEffect/javascriptME08.html
@@ -83,6 +83,9 @@
         border-radius: 50%;
         transform: scale(0.2);
     }
+    .info {
+        z-index: 9999;
+    }
 
     </style>
 </head>
@@ -149,7 +152,7 @@
     <!-- info -->
     <div class="info">
         <h1><a href="index.html">Mouse Effect08 - javascript</a></h1>
-        <p>메뉴 이펙트 - 브랜딩 이펙트</p>
+        <p>마우스 이펙트 - 마우스 따라 움직이기</p>
     </div>
 
     <div class="info right">
