--- a/refer-effect/mouseEffect/jqueryMe08.html
+++ b/refer-effect/mouseEffect/jqueryMe08.html
@@ -80,6 +80,9 @@
         background-color: rgba(255,255,255,0.3);
         border-radius: 5px;
     }
+    .info {
+        z-index: 9999;
+    }
 
     </style>
 </head>
@@ -146,7 +149,7 @@
     <!-- info -->
     <div class="info">
         <h1><a href="index.html">Mouse Effect08 - jQuery</a></h1>
-        <p>메뉴 이펙트 - 브랜딩 이펙트</p>
+        <p>마우스 이펙트 - 마우스 따라 움직이기</p>
     </div>
 
     <div class="info right">
