--- a/site-react/about.html
+++ b/site-react/about.html
@@ -80,8 +80,8 @@
                         <img src="assets/img/about_img01.jpg" alt="이미지01">
                         </div>
                         <div class="sub_txt01">
-                            <p>꿈을 설계하고 디자인하다.<br><br>
-                            나는 공간을 만드는 것을 좋아한다 어려을 때부터 나만의 공간을 만드는 것을 좋아했고 나만의 다락방을 좋아했다. 단 한 사람이라도 내가 만든 공간 속에서 영감을 받거나 마음이 움직였으면 좋겠다. 서울에는 집이 없지만, 이곳에서는 나만의 집이 많다. 그 집은 비용도 들지 않고 언제든지 만들 수 있다. 나만의 공간을 마음것 만들 수 있다는 건 코딩에 엄청난 매력인거 같다. 그 한구석에 나만의 꿈을 설계하고 디자인을 하며 앞으로도 살고 싶다.</p>
+                            <p>나만의 디자인 나의 공간<br><br>
+                            나는 새로이 태어나는 것들을 사랑한다. 넓은 들판에 덧없이 피어오르는 이름 모를 꽃도 집주인이 바뀔때 마다 그 사람의 인생이 녹아든 가구와 인테리어도 그리고 그 새로움을 위한 꾸밈을 좋아하기에 하루하루 다이어리를 쓰고 새하얀 백지에 그림을 그리고 의자에 앉아서 디자인을 한다. 디자인은 창조다. 그리고 디자이너는 거기에 의미를 부여한다. 나는 그 모든것들이 즐겁고 보람있다. 이제 새로운 나만의 공간을 시작하려고한다. 새 책상에 새로운 캔버스..벅차오르기도하고 두렵기도하지만 이 곳을 가득 채우고나면 무엇이 남을지 계속 그려가기로 했다.</p>
                         </div>
                     </div>
                     <div class="sub_box">
@@ -89,8 +89,8 @@
                         <img src="assets/img/about_img02.jpg" alt="이미지01">
                         </div>
                         <div class="sub_txt02">
-                            <p>열심히 할수록 기회는 따른다.<br><br>
-                                운이 좋은 사람은 없다. 단지 운을 만들 뿐이다. 운을 만들기 위해서는 내가 좋아하는 일이나 내가 하고 싶은 일에 몰두하면 된다. 몰두 하다보면 길이 보이고 방향이 보이게 된다. 운이란 고된 노동과 노력을 통해 스스로 만들어 내는 것이다. 복권에 당첨되는 사람들은 금방 돈을 허비하게 된다. 단지 행운만 좋았기 때문이다. 운을 만든 사람은 돈을 날려먹거나 헛되게 쓰지 않는다. 열심히 할수록 운은 나에게 온다.</p>
+                            <p>모든 노력에 보상이 따르지는 않는다.<br><br>
+                               노력은 배신하지 않는다고들 한다. 하지만 열심히 노력해도 성과를 달성 못할 수도 있고 내가 바라던 보상이 아니게된다면 그 결과는 마음이 지치고 더이상 노력할 의지마저 꺽여버릴 수 있다. 그럴수록 우리는 자신의 약점을 인정하고 자만하지말고 받아들여야한다. 그리고 그 노력을 타인에게 베풀고 서로 기대면서 살아가는 일에 쓸 수 있는 마음이 중요하다고 생각한다.</p>
                         </div>
                     </div>
                     <div class="sub_box">
