--- a/index.html
+++ b/index.html
@@ -541,6 +541,27 @@
                     <!-- //box -->
 
                     <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="https://github.com/heoar/dothome21/tree/main/project" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">portfolio</span>
+                                    <span class="overlay-text-thumb-donut">포트폴리오</span>
+                                    <span class="overlay-text-thumb1-donut">포트폴리오</span>
+                                    <span class="overlay-text-thumb2-donut">portfolio</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>portfolio</h5>
+                                    <p>포트폴리오</p>
+                                    <span>portfolio</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
                     <section class="color-shape figma reference">
                         <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=358%3A29&node-id=358%3A35&scaling=min-zoom" target="_blank">
                             <div class="image-wrap">
