--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="https://github.com/heoar/dothome21/tree/main/project" target="_blank">
+                        <a href="site/portfolio.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">portfolio</span>
