--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -84,6 +84,23 @@
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
+                                <img src="img/Desktop.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- <p>사이트 보기1 <a href="#">View</a></p> -->
+                </div>
+                <!-- //Intro1 -->
+
+
+
+                
+                <!-- Intro1 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro1" class="page-header">portfolio</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
                                 <img src="img/po01.png" alt="레이아웃">
                             </a>
                         </div>
