--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -241,7 +241,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
-                                <img src="#" alt="레이아웃">
+                                <img src="img/po11.png" alt="레이아웃">
                             </a>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
-                                <img src="#" alt="레이아웃">
+                                <img src="img/po12.png" alt="레이아웃">
                             </a>
                         </div>
                     </div>
