--- a/refer-effect/gameEffect/cardGame.html
+++ b/refer-effect/gameEffect/cardGame.html
@@ -331,17 +331,25 @@
             playStop = "is-disabled",
             timeoutLength = 900;
 
-        let sound = [
+            let sound = [
+            "../assets/audio/Beyond - Patrick Patrikios.mp3",
             "../assets/audio/match2.mp3",
             "../assets/audio/match.mp3",
             "../assets/audio/up.mp3",],
-            soundMatch = new Audio(sound[0]),
-            soundNoMatch = new Audio(sound[1]),
-            soundSuccess = new Audio(sound[2]),
-            turnsCount = 5,         //기회 횟수
-            attempsCount = 0,       //시도 횟수
-            winCount = 0,           //성공 횟수
-            card1, card2, msg;
+            socundMathc = new Audio(sound[0]),
+            socundnoMathc = new Audio(sound[1]),
+            socundSuccess = new Audio(sound[2]);
+
+            //음악 버튼을 클릭하면 꺼지고 클릭하면 다시 켜지기 toggleClass / attr
+            $btnSound.on("click",function(){
+                soundMatch = new Audio(sound[0]),
+                soundNoMatch = new Audio(sound[1]),
+                soundSuccess = new Audio(sound[2]),
+                turnsCount = 5,         //기회 횟수
+                attempsCount = 0,       //시도 횟수
+                winCount = 0,           //성공 횟수
+                card1, card2, msg;
+
         // audio 
         $btnSound.on("click", function(){
             $(this).find("i").toggleClass("fa-volume-up fa-volume-off");
@@ -463,10 +471,9 @@
                 //     var remove = num.splice(6,1)
                 // )
             
-            //while 시작~중간점
-            let cards = $cardWrap.children();
-            for(let i=0; i<=cards.length; i++){
-                $cardWrap.append(cards.splice(Math.floor(Math.random()*cards.length), 1 )[0] )
+                let cards = $cardWrap.children();
+                for(let i=0; i<=cards.length; i++){
+                    $cardWrap.append(cards.splice(Math.floor(Math.random()*cards.length), 1 )[0] )
             }
 
             $card.each(function(index){
