--- a/refer-effect/gameEffect/searchGame.html
+++ b/refer-effect/gameEffect/searchGame.html
@@ -192,7 +192,7 @@
         </div>
         <div class="info">
             <div>남은 시간 : <span class="time">1:00</span></div>
-            <div>현재 점수 : <span class="score">0</span>/<span class="total">388</span></div>
+            <div>현재 점수 : <span class="score">0</span>/<span class="total">199</span></div>
         </div>
         <div class="msg"></div>
         <div class="answers"></div>
@@ -240,7 +240,7 @@
             checkAnswers();
 
             //음악시작
-            // $themeMusic.play();
+            $themeMusic.play();
         }
 
         //인풋 체크
