--- a/index.html
+++ b/index.html
@@ -131,20 +131,7 @@
                         <h1>Professional web publishers</h1>
                     </div>
                     <div class="header_icon">
-                        <ul>
-                            <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter"
-                                        aria-hidden="true"></i><span>twitter</span></a></li>
-                            <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen"
-                                        aria-hidden="true"></i><span>codepen</span></a></li>
-                            <li><a href="https://github.com/webstoryboy" target="_blank"><i class="fa fa-github"
-                                        aria-hidden="true"></i><span>github</span></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
-                                        class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
-                            <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble"
-                                        aria-hidden="true"></i><span>dribbble</span></a></li>
-                            <li><a href="https://www.instagram.com/webstoryboy/" target="_blank"><i
-                                        class="fa fa-instagram" aria-hidden="true"></i><span>instagram</span></a></li>
-                        </ul>
+        
                     </div>
                 </div>
             </div>
@@ -156,7 +143,7 @@
     <!-- contents_tit -->
     <div id="contents_tit">
         <div class="titt">
-            <p><a href="#" class="tit_btn">&quot;나는 허아라이다&quot;</a></p>
+            <p><a href="#" class="tit_btn">&quot;웹퍼블리셔를 꿈꾸는 허아라입니다&quot;</a></p>
         </div>
     </div>
     <!-- //contents_tit -->
@@ -193,7 +180,7 @@
                                     <span class="overlay-text-thumb1-donut">클래스</span>
                                     <span class="overlay-text-thumb2-donut">CLASS</span>
                                 </div>
-                                <img src="assets/img/svg-donut.svg" alt="portfolio">
+                                <img src="assets/ico/free-icon-barrel-4498928.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>CLASS</h5>
                                     <p>클래스</p>
@@ -214,7 +201,7 @@
                                     <span class="overlay-text-thumb1-donut">자바스크립트</span>
                                     <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                                 </div>
-                                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
+                                <img src="assets/ico/free-icon-carrots-4498904.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>JAVASCRIPT</h5>
                                     <p>자바스크립트</p>
@@ -235,7 +222,7 @@
                                     <span class="overlay-text-thumb1-donut">제이쿼리</span>
                                     <span class="overlay-text-thumb2-donut">Jquery</span>
                                 </div>
-                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
+                                <img src="assets/ico/free-icon-eggs-4498918.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>Jquery</h5>
                                     <p>제이쿼리</p>
@@ -256,7 +243,7 @@
                                     <span class="overlay-text-thumb1-donut">레이아웃</span>
                                     <span class="overlay-text-thumb2-donut">LAYOUT</span>
                                 </div>
-                                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                                <img src="assets/ico/free-icon-honey-4498937.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>LAYOUT</h5>
                                     <p>레이아웃</p>
@@ -277,7 +264,7 @@
                                     <span class="overlay-text-thumb1-donut">레퍼런스</span>
                                     <span class="overlay-text-thumb2-donut">html</span>
                                 </div>
-                                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                                <img src="assets/ico/free-icon-sprout-4498932.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>html</h5>
                                     <p>레퍼런스</p>
@@ -298,7 +285,7 @@
                                     <span class="overlay-text-thumb1-donut">레퍼런스</span>
                                     <span class="overlay-text-thumb2-donut">css</span>
                                 </div>
-                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-barn-4498950.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>css</h5>
                                     <p>레퍼런스</p>
@@ -319,7 +306,7 @@
                                     <span class="overlay-text-thumb1-donut">메가박스</span>
                                     <span class="overlay-text-thumb2-donut">megabox</span>
                                 </div>
-                                <img src="assets/img/svg-pizza.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-basket-4498960.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>megabox</h5>
                                     <p>메가박스</p>
@@ -340,32 +327,11 @@
                                     <span class="overlay-text-thumb1-donut">사이트 제작</span>
                                     <span class="overlay-text-thumb2-donut">wireframe</span>
                                 </div>
-                                <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-bird-house-4499092.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>wireframe</h5>
                                     <p>사이트 제작</p>
                                     <span>wireframe</span>
-                                </div>
-                            </div>
-                        </a>
-                    </section>
-                    <!-- //box -->
-
-                    <!-- box -->
-                    <section class="color-shape reference">
-                        <a href="refer-effect/gameEffect/index.html" target="_blank">
-                            <div class="image-wrap">
-                                <div class="hover-wrap">
-                                    <span class="overlay-img-donut">gameeffect</span>
-                                    <span class="overlay-text-thumb-donut">게임이펙트</span>
-                                    <span class="overlay-text-thumb1-donut">게임이펙트</span>
-                                    <span class="overlay-text-thumb2-donut">gameeffect</span>
-                                </div>
-                                <img src="assets/img/svg-hotdog.svg" alt="portfolio">
-                                <div class="img-text donutImg">
-                                    <h5>gameeffect</h5>
-                                    <p>게임이펙트</p>
-                                    <span>gameeffect</span>
                                 </div>
                             </div>
                         </a>
@@ -382,7 +348,7 @@
                                     <span class="overlay-text-thumb1-donut">메뉴이펙트</span>
                                     <span class="overlay-text-thumb2-donut">menueffect</span>
                                 </div>
-                                <img src="assets/img/svg-lemon.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-bucket-4499060.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>menueffect</h5>
                                     <p>메뉴이펙트</p>
@@ -403,7 +369,7 @@
                                     <span class="overlay-text-thumb1-donut">마우스이펙트</span>
                                     <span class="overlay-text-thumb2-donut">mouseeffect</span>
                                 </div>
-                                <img src="assets/img/svg-pear.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-cheese-4498994.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>mouseeffect</h5>
                                     <p>마우스이펙트</p>
@@ -424,7 +390,7 @@
                                     <span class="overlay-text-thumb1-donut">패러랠이펙트</span>
                                     <span class="overlay-text-thumb2-donut">parallexeffect</span>
                                 </div>
-                                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-eggs-4498999.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>parallexeffect</h5>
                                     <p>패러랠이펙트</p>
@@ -445,11 +411,32 @@
                                     <span class="overlay-text-thumb1-donut">슬라이더이펙트</span>
                                     <span class="overlay-text-thumb2-donut">slidereffect</span>
                                 </div>
-                                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-farmer-4499112.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>slidereffect</h5>
                                     <p>슬라이더이펙트</p>
                                     <span>slidereffect</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-effect/gameEffect/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">gameeffect</span>
+                                    <span class="overlay-text-thumb-donut">게임이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">게임이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">gameeffect</span>
+                                </div>
+                                <img src="assets/ico/premium-icon-fertilizer-4499108.png" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>gameeffect</h5>
+                                    <p>게임이펙트</p>
+                                    <span>gameeffect</span>
                                 </div>
                             </div>
                         </a>
@@ -466,7 +453,7 @@
                                     <span class="overlay-text-thumb1-donut">데이터베이스</span>
                                     <span class="overlay-text-thumb2-donut">mysql</span>
                                 </div>
-                                <img src="assets/img/svg-strawberry-magnum.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-fork-4499109.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>mysql</h5>
                                     <p>데이터베이스</p>
@@ -487,7 +474,7 @@
                                     <span class="overlay-text-thumb1-donut">데이터베이스</span>
                                     <span class="overlay-text-thumb2-donut">php</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-hat-4499072.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>php</h5>
                                     <p>데이터베이스</p>
@@ -508,7 +495,7 @@
                                     <span class="overlay-text-thumb1-donut">팀프로젝트</span>
                                     <span class="overlay-text-thumb2-donut">project</span>
                                 </div>
-                                <img src="assets/img/svg-grapes.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-jam-4498983.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>project</h5>
                                     <p>팀프로젝트</p>
@@ -529,7 +516,7 @@
                                     <span class="overlay-text-thumb1-donut">팀프로젝트소스</span>
                                     <span class="overlay-text-thumb2-donut">project</span>
                                 </div>
-                                <img src="assets/img/svg-popcorn.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-milk-4498969.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>project</h5>
                                     <p>팀프로젝트소스</p>
@@ -550,7 +537,7 @@
                                     <span class="overlay-text-thumb1-donut">포트폴리오</span>
                                     <span class="overlay-text-thumb2-donut">portfolio</span>
                                 </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-milk-4499076.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>portfolio</h5>
                                     <p>포트폴리오</p>
@@ -571,7 +558,7 @@
                                     <span class="overlay-text-thumb1-donut">피그마 자바스크립트</span>
                                     <span class="overlay-text-thumb2-donut">figma javascript</span>
                                 </div>
-                                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-sawing-4499104.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>figma javascript</h5>
                                     <p>피그마 자바스크립트</p>
@@ -592,7 +579,7 @@
                                     <span class="overlay-text-thumb1-donut">피그마 제이쿼리</span>
                                     <span class="overlay-text-thumb2-donut">figma jquery</span>
                                 </div>
-                                <img src="assets/img/svg-donut.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-scarecrow-4499098.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>figma jquery</h5>
                                     <p>피그마 제이쿼리</p>
@@ -613,7 +600,7 @@
                                     <span class="overlay-text-thumb1-donut">피그마 Mysql</span>
                                     <span class="overlay-text-thumb2-donut">figma Mysql</span>
                                 </div>
-                                <img src="assets/img/svg-pizza.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-silo-4499079.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>figma Mysql</h5>
                                     <p>피그마 Mysql</p>
@@ -634,7 +621,7 @@
                                     <span class="overlay-text-thumb1-donut">피그마 SCSS</span>
                                     <span class="overlay-text-thumb2-donut">figma SCSS</span>
                                 </div>
-                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-sprayer-4498974.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>figma SCSS</h5>
                                     <p>피그마 SCSS</p>
@@ -655,7 +642,7 @@
                                     <span class="overlay-text-thumb1-donut">피그마 script</span>
                                     <span class="overlay-text-thumb2-donut">figma 스크립트</span>
                                 </div>
-                                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                                <img src="assets/ico/premium-icon-tomato-4498939.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>figma script</h5>
                                     <p>피그마 스크립트</p>
@@ -682,7 +669,7 @@
             <div class="row">
                 <div class="span12">
                     <h5>
-                        <a href="https://heoar.github.io/dothome21/" target="_blank">HEOAR</a>
+                        아이콘 제작자 <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon">www.flaticon.com</a></a>
                         <span id="clock"></span>
                         <span id="infor"></span>
                     </h5>
