--- a/class/index.html
+++ b/class/index.html
@@ -70,7 +70,6 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li><a href="https://javab-png.tistory.com/">Tistory</a></li>
-                    <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
                 </ul>
             </nav>
         </div>
@@ -110,17 +109,17 @@
                         </a>
                     </div>
                     <div class="col-xs-6 col-md-3">
-                        <a href="https://www.youtube.com/watch?v=eGrvoHIobNc" class="thumbnail">
+                        <a href="#" class="thumbnail">
                             <img src="img/img05.jpg">
                         </a>
                     </div>
                     <div class="col-xs-6 col-md-3">
-                        <a href="https://www.youtube.com/watch?v=J1AdPY73qxo&list=RDJ1AdPY73qxo&index=1" class="thumbnail">
+                        <a href="#" class="thumbnail">
                             <img src="img/img06.jpg">
                         </a>
                     </div>
                     <div class="col-xs-6 col-md-3">
-                        <a href="https://www.youtube.com/channel/UCyIe-61Y8C4_o-zZCtO4ETQ" class="thumbnail">
+                        <a href="#" class="thumbnail">
                             <img src="img/img07.jpg">
                         </a>
                     </div>
