20211103수정업로드
수정업로드

--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -236,31 +236,31 @@
                 <tbody>
                     <tr>
                         <td>align-content</td>
-                        <td></td>
+                        <td>콘텐츠 사이와 콘텐츠 주위 빈 공간을 플렉스박스의 교차축, 그리드의 블록 축을 따라 배치하는 방식을 결정</td>
                     </tr>
                     <tr>
                         <td>align-items</td>
-                        <td></td>
+                        <td>플렉스 요소의 수직 방향 정렬 방식을 설정</td>
                     </tr>
                     <tr>
                         <td>align-self</td>
-                        <td></td>
+                        <td>개별적인 콘텐츠 아이템의 정렬 상태를 설정</td>
                     </tr>
                     <tr>
                         <td>all</td>
-                        <td></td>
+                        <td>용자 지정 속성을 제외한 모든 속성을 초기화</td>
                     </tr>
                     <tr>
                         <td>animation</td>
-                        <td></td>
+                        <td>엘리먼트에 적용되는 CSS 스타일을 다른 CSS 스타일로 부드럽게 전환</td>
                     </tr>
                     <tr>
                         <td>animation-delay</td>
-                        <td></td>
+                        <td>애니메이션이 시작할 시점을 지정</td>
                     </tr>
                     <tr>
                         <td>animation-direction</td>
-                        <td></td>
+                        <td>애니메이션이 앞으로, 뒤로 또는 앞뒤로 번갈아 재생되어야하는지 여부를 지정</td>
                     </tr>
                     <tr>
                         <td>animation-duration</td>
@@ -268,27 +268,27 @@
                     </tr>
                     <tr>
                         <td>animation-fill-mode</td>
-                        <td></td>
+                        <td>애니메이션이 한 사이클을 완료하는 데 걸리는 시간을 지정</td>
                     </tr>
                     <tr>
                         <td>animation-iteration-count</td>
-                        <td></td>
+                        <td>애니메이션이 몇 번 반복될지 지정</td>
                     </tr>
                     <tr>
                         <td>animation-name</td>
-                        <td></td>
+                        <td>애니메이션의 이름을 지정합니다.</td>
                     </tr>
                     <tr>
                         <td>animation-play-state</td>
-                        <td></td>
+                        <td>애니메이션 진행상태를 설정</td>
                     </tr>
                     <tr>
                         <td>animation-timing-function</td>
-                        <td></td>
+                        <td>애니메이션 효과의 시간당 속도를 설정</td>
                     </tr>
                     <tr>
                         <td>backface-visibility</td>
-                        <td></td>
+                        <td>요소의 뒷면이 사용자를 향할 때 보여야 하는지 지정</td>
                     </tr>
                     <tr>
                         <td>background</td>
@@ -368,27 +368,27 @@
                     </tr>
                     <tr>
                         <td>border-image</td>
-                        <td></td>
+                        <td>요소의 주위에 이미지를 그립니다. 일반 테두리를 대체</td>
                     </tr>
                     <tr>
                         <td>border-image-outset</td>
-                        <td></td>
+                        <td>요소의 테두리 상자와 테두리 이미지의 거리를 설정</td>
                     </tr>
                     <tr>
                         <td>border-image-repeat</td>
-                        <td></td>
+                        <td>원본 이미지의 모서리 영역을 요소의 테두리 이미지 크기에 맞춰 조절할 때 사용할 방법을 지정</td>
                     </tr>
                     <tr>
                         <td>border-image-slice</td>
-                        <td></td>
+                        <td>한 개에서 네 개의 &lt;number&gt; 또는 &lt;percentage&gt; 값을 사용해 지정</td>
                     </tr>
                     <tr>
                         <td>border-image-source</td>
-                        <td></td>
+                        <td>요소의 테두리 이미지로 사용할 원본 이미지를 지정</td>
                     </tr>
                     <tr>
                         <td>border-image-width</td>
-                        <td></td>
+                        <td>요소 테두리 이미지의 너비를 설정</td>
                     </tr>
                     <tr>
                         <td>border-left</td>
@@ -468,23 +468,23 @@
                     </tr>
                     <tr>
                         <td>box-decoration-break</td>
-                        <td></td>
+                        <td>컬럼 및 줄바꿈시 테두리와 패딩의 방식을 설정</td>
                     </tr>
                     <tr>
                         <td>box-shadow</td>
-                        <td></td>
+                        <td>요소의 테두리를 감싼 그림자 효과를 추가</td>
                     </tr>
                     <tr>
                         <td>box-sizing</td>
-                        <td></td>
+                        <td>박스의 크기를 어떤 것을 기준으로 계산할지를 정하는 속성</td>
                     </tr>
                     <tr>
                         <td>caption-side</td>
-                        <td></td>
+                        <td>표(table)의 캡션의 위치를 정하는 속성</td>
                     </tr>
                     <tr>
                         <td>caret-color</td>
-                        <td></td>
+                        <td>커서의 색상을 변경하는 속성</td>
                     </tr>
                     <tr>
                         <td>clear</td>
@@ -492,7 +492,7 @@
                     </tr>
                     <tr>
                         <td>clip</td>
-                        <td></td>
+                        <td>요소의 특정 부분만 나오도록 설정</td>
                     </tr>
                     <tr>
                         <td>color</td>
@@ -500,7 +500,7 @@
                     </tr>
                     <tr>
                         <td>column-count</td>
-                        <td></td>
+                        <td>해당 요소를 몇 개의 칼럼(column)으로 나눌지를 설정</td>
                     </tr>
                     <tr>
                         <td>column-fill</td>
