--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -25,8 +25,8 @@
             <li><a href="../gameEffect/quiz/quiz03.html">3</a></li>
             <li><a href="../gameEffect/quiz/quiz04.html">4</a></li>
             <li><a href="../gameEffect/quiz/quiz05.html">5</a></li>
-            <li><a href="gameEffect/cardGame.html">6</a></li>
-            <li><a href="gameEffect/searchGame.html">7</a></li>
+            <li><a href="../gameEffect/cardGame.html">6</a></li>
+            <li><a href="../gameEffect/searchGame.html">7</a></li>
         </ul>
     </nav>
 
