--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -992,11 +992,11 @@
                     </tr>
                     <tr>
                         <td>unicode-bidi</td>
-                        <td></td>
+                        <td>특성, 문서의 양방향 텍스트가 처리되는 방법을 결정</td>
                     </tr>
                     <tr>
                         <td>user-select</td>
-                        <td></td>
+                        <td>속성은 사용자가 텍스트를 선택할 수 있는지 지정</td>
                     </tr>
                     <tr>
                         <td>vertical-align</td>
@@ -1004,11 +1004,11 @@
                     </tr>
                     <tr>
                         <td>visibility</td>
-                        <td></td>
+                        <td>문서의 레이아웃을 변경하지 않고 요소를 보이거나 숨깁니다.</td>
                     </tr>
                     <tr>
                         <td>white-space</td>
-                        <td></td>
+                        <td>속성은 요소가 공백 문자를 처리하는 법을 지정</td>
                     </tr>
                     <tr>
                         <td>width</td>
@@ -1016,19 +1016,19 @@
                     </tr>
                     <tr>
                         <td>word-break</td>
-                        <td></td>
+                        <td>텍스트가 자신의 콘텐츠 박스 밖으로 오버플로 할 때 줄을 바꿀 지 지정</td>
                     </tr>
                     <tr>
                         <td>word-spacing</td>
-                        <td></td>
+                        <td>단어와 단어 사이, 태그와 태그 사이의 거리를 설정</td>
                     </tr>
                     <tr>
                         <td>word-wrap</td>
-                        <td></td>
+                        <td>띄어쓰기가 없는 긴 단어를 어떻게 처리할지 정합니다</td>
                     </tr>
                     <tr>
                         <td>z-index</td>
-                        <td></td>
+                        <td>위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정</td>
                     </tr>
                 </tbody>
             </table>
